modified user listboards to react more and add styling and add adjust server communication

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,9 @@
 }
 
 body {
+  height: 100vh;
   margin: 0;
+  padding: 0;
 }
 
 
@@ -31,6 +33,9 @@ button {
 
 #root {
   text-align: center;
+  height: 100vh;
+  width: 100vw;
+  display: block;
 }
 
 
