--- a/src/Stylesheets/newTodoAnimation.css
+++ b/src/Stylesheets/newTodoAnimation.css
@@ -1,45 +1,45 @@
 
 .newtodo-form-open {
   opacity: 1;
-  transition: all 200ms ease-in-out;
+  transition: all 350ms cubic-bezier(0.5, 0.3, 0.2, 1);
 }
 
 .newtodo-form {
   opacity: 0;
   pointer-events: none;
   transform: translateY(100px);
-  transition: all 200ms ease-in-out;
+  transition: all 350ms cubic-bezier(0.5, 0.3, 0.2, 1);
 }
 
 .date-container {
   height: 40px;
-  transition: all 200ms ease-in-out;
+  transition: all 350ms cubic-bezier(0.5, 0.3, 0.2, 1);
 }
 
 .date-container.open {
   height: 80px;
-  transition: all 200ms ease-in-out;
+  transition: all 350ms cubic-bezier(0.5, 0.3, 0.2, 1);
 }
 
 .date-input {
   opacity: 0;
   pointer-events: none;
-  transition: all 200ms ease-in-out;
+  transition: all 350ms cubic-bezier(0.5, 0.3, 0.2, 1);
 }
 
 .date-input.open {
   opacity: 1;
   pointer-events: all;
-  transition: all 200ms ease-in-out;
+  transition: all 350ms cubic-bezier(0.5, 0.3, 0.2, 1);
 }
 
 .arrow.open {
   transform: rotate(180deg);
-  transition: all 200ms ease-in-out;
+  transition: all 350ms cubic-bezier(0.5, 0.3, 0.2, 1);
 }
 
 .arrow {
-  transition: all 200ms ease-in-out;
+  transition: all 350ms cubic-bezier(0.5, 0.3, 0.2, 1);
 }
 
 @keyframes appear {
